<resources>
    <string name="app_name">AndroidComponents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_name">Your Name</string>
    <string name="input_age">Your Age</string>
    <string name="input_email">Your Email</string>
    <string name="input_password">Your Password</string>
    <string name="go">Go</string>
    <string name="msg_title">Enter your Personal Info</string>
</resources>